added extra new functionality